@@ -25,7 +25,7 @@ class PredictorVM(predictor_view.Ui_RoweTechPredictor):
         self.calc_data = 0.0
         self.calc_num_batt = 0.0
 
-        self.revLabel.setText("© RoweTech Inc. Rev 1.3")
+        self.revLabel.setText("© RoweTech Inc. Rev 1.4")
 
         # Connect the buttons
         self.addSubsystemButton.clicked.connect(self.add_subsystem)
