@@ -1,3 +1,4 @@
 pyqt5
 qdarkstyle
 pyinstaller
+pytest
