@@ -1,5 +1,8 @@
 ChangeLog PredictR
 
+PredictR-1.4
+ * Fixed bug with Max Velocity and Narrowband
+
 PredictR-1.3
  - Updated the Prediction Model to Rev Y
 
